--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
   "dependencies": {
     "@reach/menu-button": "^0.1.7",
     "@reach/skip-nav": "^0.1.1",
-    "babel-plugin-styled-components": "^1.7.1",
     "gatsby": "^2.0.0",
     "gatsby-plugin-feed": "^2.0.5",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.0.5",
-    "gatsby-plugin-styled-components": "^3.0.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.1",
@@ -28,11 +27,11 @@
     "gatsby-transformer-remark": "^2.1.1",
     "gatsby-transformer-sharp": "^2.1.1",
     "lodash": "^4.17.11",
+    "node-sass": "^4.9.3",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^3.4.9"
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
