--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@reach/menu-button": "^0.1.7",
     "@reach/skip-nav": "^0.1.1",
     "gatsby": "^2.0.0",
+    "gatsby-image": "^2.0.8",
     "gatsby-plugin-feed": "^2.0.5",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.2",
