--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "gatsby develop",
     "dev": "npm start",
     "clean": "gatsby clean",
+    "build": "gatsby build",
     "serve": "gatsby build && gatsby serve",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
