--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dylansheffer",
-  "version": "0.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,35 +16,36 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.1",
-    "@mdx-js/react": "^1.6.1",
+    "@mdx-js/mdx": "^1.6.6",
+    "@mdx-js/react": "^1.6.6",
     "@wesbos/dump": "^0.1.1",
     "babel-plugin-styled-components": "^1.10.7",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.21.30",
-    "gatsby-image": "^2.4.3",
-    "gatsby-plugin-manifest": "^2.4.3",
-    "gatsby-plugin-mdx": "^1.2.7",
+    "gatsby": "^2.23.9",
+    "gatsby-image": "^2.4.8",
+    "gatsby-plugin-manifest": "^2.4.13",
+    "gatsby-plugin-mdx": "^1.2.17",
+    "gatsby-plugin-netlify": "^2.3.6",
     "gatsby-plugin-prettier-build": "^0.4.3",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sharp": "^2.6.3",
-    "gatsby-plugin-styled-components": "^3.3.1",
+    "gatsby-plugin-react-helmet": "^3.3.5",
+    "gatsby-plugin-sharp": "^2.6.13",
+    "gatsby-plugin-styled-components": "^3.3.5",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-autolink-headers": "^2.3.2",
-    "gatsby-remark-copy-linked-files": "^2.3.2",
-    "gatsby-remark-images": "^3.3.3",
-    "gatsby-remark-responsive-iframe": "^2.4.2",
-    "gatsby-remark-vscode": "^2.1.1",
-    "gatsby-source-filesystem": "^2.3.3",
-    "gatsby-transformer-remark": "^2.8.8",
-    "gatsby-transformer-sharp": "^2.5.2",
+    "gatsby-remark-autolink-headers": "^2.3.6",
+    "gatsby-remark-copy-linked-files": "^2.3.6",
+    "gatsby-remark-images": "^3.3.12",
+    "gatsby-remark-responsive-iframe": "^2.4.6",
+    "gatsby-remark-vscode": "^2.1.2",
+    "gatsby-source-filesystem": "^2.3.13",
+    "gatsby-transformer-remark": "^2.8.18",
+    "gatsby-transformer-sharp": "^2.5.6",
     "normalize.css": "^8.0.1",
-    "query-string": "^6.12.1",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
@@ -53,9 +54,9 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-wesbos": "0.0.19",
     "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.19.1"
